--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -6,12 +6,26 @@
   </ion-toolbar>
 </ion-header>
 
+
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
+      
     </ion-toolbar>
   </ion-header>
 
   <app-explore-container name="Tab 1 page"></app-explore-container>
 </ion-content>
+
+<ion-card>
+  <ion-card-header>
+    <ion-card-title>Conselho de Senhas</ion-card-title>
+  </ion-card-header>
+  <ion-card-content>
+    <ion-input readonly="true" label="Senha: " [(ngModel)]="inputNovaSenha"></ion-input>
+    <ion-button expand="block" (click)="senhasService.somaGeral()">Senha Geral</ion-button>
+    <ion-button expand="block" (click)="senhasService.somaPrior()">Senhas Prioritárias</ion-button>
+    <ion-button expand="block" (click)="senhasService.somaExame()">Senha Exame</ion-button>
+  </ion-card-content>
+</ion-card>
+
