--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,4 +1,4 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
     <ion-title>
       Tab 1
@@ -6,26 +6,22 @@
   </ion-toolbar>
 </ion-header>
 
+<ion-content>
+  <ion-card>
+    <ion-card-header>
+      Senhas
+    </ion-card-header>
+    <ion-card-content>
+      <ion-list>
+        <ion-item>
+          <ion-label>Senha:</ion-label>
+          <ion-input readonly="true" [(ngModel)]="senhasService.inputNovaSenha"></ion-input>
+        </ion-item>
+      </ion-list>
+    </ion-card-content>
+  </ion-card>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+  <ion-button expand="block" (click)="senhasService.novaSenha('SG')">Senha Geral</ion-button>
+  <ion-button expand="block" (click)="senhasService.novaSenha('SP')">Senhas Prioritárias</ion-button>
+  <ion-button expand="block" (click)="senhasService.novaSenha('SE')">Senha Exame</ion-button>
 </ion-content>
-
-<ion-card>
-  <ion-card-header>
-    <ion-card-title>Conselho de Senhas</ion-card-title>
-  </ion-card-header>
-  <ion-card-content>
-    <ion-input readonly="true" label="Senha: " [(ngModel)]="inputNovaSenha"></ion-input>
-    <ion-button expand="block" (click)="senhasService.somaGeral()">Senha Geral</ion-button>
-    <ion-button expand="block" (click)="senhasService.somaPrior()">Senhas Prioritárias</ion-button>
-    <ion-button expand="block" (click)="senhasService.somaExame()">Senha Exame</ion-button>
-  </ion-card-content>
-</ion-card>
-
